[gd_scene load_steps=10 format=3 uid="uid://drb2k3ldr6k68"]

[ext_resource type="Script" path="res://scripts/shop/shopping_cart.gd" id="1_8mq3i"]

[sub_resource type="BoxShape3D" id="BoxShape3D_60q18"]
size = Vector3(0.6, 0.4, 1)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_dbfat"]
points = PackedVector3Array(0.25, 0.1, 0.5, 0.25, -0.1, 0.5, 0.25, 0.1, -0.5, -0.25, 0.1, 0.5, -0.25, -0.1, 0.5, 0.25, -0.1, -0.5, -0.25, 0.1, -0.5, -0.25, -0.1, -0.5)

[sub_resource type="BoxMesh" id="BoxMesh_jj5er"]
size = Vector3(0.5, 0.2, 1)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_tbov0"]
points = PackedVector3Array(-0.025, -0.1, -0.5, 0.025, -0.1, -0.5, -0.025, -0.1, 0.5, -0.025, 0.1, -0.5, 0.025, 0.1, -0.5, 0.025, -0.1, 0.5, -0.025, 0.1, 0.5, 0.025, 0.1, 0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mjgix"]
transparency = 1
albedo_color = Color(0.545098, 0.0117647, 0.788235, 0.156863)

[sub_resource type="BoxMesh" id="BoxMesh_pi5jr"]
material = SubResource("StandardMaterial3D_mjgix")
size = Vector3(0.05, 0.2, 1)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_vg7jf"]
points = PackedVector3Array(-0.025, -0.1, -0.25, 0.025, -0.1, -0.25, -0.025, -0.1, 0.25, -0.025, 0.1, -0.25, 0.025, 0.1, -0.25, 0.025, -0.1, 0.25, -0.025, 0.1, 0.25, 0.025, 0.1, 0.25)

[sub_resource type="BoxMesh" id="BoxMesh_vfxf1"]
material = SubResource("StandardMaterial3D_mjgix")
size = Vector3(0.05, 0.2, 0.5)

[node name="Shopping Cart" type="AnimatableBody3D"]
script = ExtResource("1_8mq3i")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
shape = SubResource("BoxShape3D_60q18")

[node name="Bottom" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_dbfat")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Bottom"]
mesh = SubResource("BoxMesh_jj5er")
skeleton = NodePath("../..")

[node name="Side1" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, 0.2, 0)
shape = SubResource("ConvexPolygonShape3D_tbov0")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Side1"]
mesh = SubResource("BoxMesh_pi5jr")
skeleton = NodePath("../..")

[node name="Side2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, 0.2, 0)
shape = SubResource("ConvexPolygonShape3D_tbov0")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Side2"]
mesh = SubResource("BoxMesh_pi5jr")
skeleton = NodePath("../..")

[node name="Side3" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0.2, -0.5)
shape = SubResource("ConvexPolygonShape3D_vg7jf")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Side3"]
mesh = SubResource("BoxMesh_vfxf1")
skeleton = NodePath("../..")

[node name="Side4" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0.2, 0.5)
shape = SubResource("ConvexPolygonShape3D_vg7jf")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Side4"]
mesh = SubResource("BoxMesh_vfxf1")
skeleton = NodePath("../..")

[node name="ItemLocations" type="Node3D" parent="."]

[node name="item-1" type="Node3D" parent="ItemLocations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.2, 0.1, -0.4)

[node name="item-2" type="Node3D" parent="ItemLocations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.2, 0.1, -0.2)

[node name="item-3" type="Node3D" parent="ItemLocations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.2, 0.1, -4.76837e-07)

[node name="item-4" type="Node3D" parent="ItemLocations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.2, 0.1, 0.2)

[node name="item-5" type="Node3D" parent="ItemLocations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.2, 0.1, 0.4)

[node name="item-6" type="Node3D" parent="ItemLocations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, -0.4)

[node name="item-7" type="Node3D" parent="ItemLocations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, -0.2)

[node name="item-8" type="Node3D" parent="ItemLocations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, -4.76837e-07)

[node name="item-9" type="Node3D" parent="ItemLocations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0.2)

[node name="item-10" type="Node3D" parent="ItemLocations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0.4)

[node name="item-11" type="Node3D" parent="ItemLocations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 0.1, -0.4)

[node name="item-12" type="Node3D" parent="ItemLocations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 0.1, -0.2)

[node name="item-13" type="Node3D" parent="ItemLocations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 0.1, -4.76837e-07)

[node name="item-14" type="Node3D" parent="ItemLocations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 0.1, 0.2)

[node name="item-15" type="Node3D" parent="ItemLocations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 0.1, 0.4)

[connection signal="body_shape_entered" from="Area3D" to="." method="_on_area_3d_body_shape_entered"]
[connection signal="body_shape_exited" from="Area3D" to="." method="_on_area_3d_body_shape_exited"]
